# automated-research-report-generation

./: Dockerfile  Dockerfile.jenkins  Jenkinsfile  README.md  azure-deploy-jenkins.sh  build-and-push-docker-image.sh  pyproject.toml  requirements.txt  setup-app-infrastructure.sh  users.db
generated_report/Attention_All_you_need_Transformers__20251101_144418/: Attention_All_you_need_Transformers__20251101_144418.docx
generated_report/Role_of_LLM_in_the_SDLC_pipeline_20251101_030716/: Role_of_LLM_in_the_SDLC_pipeline_20251101_030716.docx
generated_report/impact_of_support_roles_because_of_Gen_AI__20251112_171537/: impact_of_support_roles_because_of_Gen_AI__20251112_171537.docx
research_and_analyst/api/: main.py
research_and_analyst/api/routes/: report_routes.py
research_and_analyst/api/services/: report_service.py
venv11/: pyvenv.cfg
venv11/Scripts/: activate  activate.bat  jsondiff  jsonpatch  jsonpointer
